--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,5 +1,5 @@
 img {
-    width: 200px;
+    max-width: 200px;
     height: auto;
 }
 
@@ -34,4 +34,33 @@ body {
   background-color: white;
   margin-top: 20px;
   padding: 10px;
+}
+
+
+.label {
+  background-color: #4aaaa5;
+  color: white;
+  padding: 5px;
+  position: absolute;
+  bottom: 10px;
+  font-size: 22px;
+  font-weight: 600px;
+  display: block;
+  width: 200px;
+  margin-left: 10px;
+
+}
+
+.portfolio-image {
+  padding: 15px;
+}
+
+.bio {
+  text-align: left;
+  padding-left: 5px;
+}
+
+.bio-photo {
+  width: 100%;
+  height: auto;
 }
