--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
     background: url("//Assets/Images/stripes-light.png");
     background-repeat: repeat;
@@ -16,25 +23,17 @@ button {
     margin: 10px 40px;
 }
 
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 #page-content {
   flex: 1 0 auto;
 }
 
-body {
-    background: url("//Assets/Images/stripes-light.png");
-    background-repeat: repeat;
+
+.title {
+    font-size: 18px;
+    margin-bottom: 5px;
 }
 
-.navbar-custom .nav-item:hover .nav-link {
-    color: papayawhip;
-}
+
 #sticky-footer {
     margin-top: 100vh;
 }
